--- a/main.html
+++ b/main.html
@@ -49,12 +49,12 @@
 				<td class="right">right</td>
 			</tr>
 			<tr>
-				<td id="t12" class="center">left</td> <!-- Added center class here -->
+				<td id="t12" class="center">left</td>
 				<td class="center">center</td>
 				<td class="right">right</td>
 			</tr>
 			<tr>
-				<td id="t13">left</td>
+				<td id="t13" class="right">left</td> <!-- Added right class here -->
 				<td class="center">center</td>
 				<td class="right">right</td>
 			</tr>
